--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "lucide-react": "^0.544.0",
+    "mobility-scooters-v2": ".",
     "motion": "^12.23.22",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
